--- a/ace-public/editor_dir.html
+++ b/ace-public/editor_dir.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title></title>
-        <script src="/js/polyfills.js"></script>
-        <script src="/js/extensions.js"></script>
+        <script src="/js/polyfills.min.js"></script>
+        <script src="/js/extensions.min.js"></script>
     </head>
     <body>
         <table>
