removed prefix to template fields

--- a/ace-public/editor_dir.html
+++ b/ace-public/editor_dir.html
@@ -20,13 +20,13 @@
             </tr>
             <tr class="template_row">
                 <td><a data-id="${id}" data-file="${file}" href="#">${file}</a></td>
-                <td id="dir_${id}_mtime">${stats.mtime.toUTCString}</td>
-                <td id="dir_${id}_size">${stats.size}</td>
+                <td id="dir_${id}_mtime">${mtime.toUTCString}</td>
+                <td id="dir_${id}_size">${size}</td>
                 <td id="dir_${id}_theme">${theme}</td>
                 <td id="dir_${id}_mode">${mode}</td>
-                <td id="dir_${id}_windowCount">${info.windowCount}</td>
-                <td id="dir_${id}_sha1">${info.sha1}</td>
-                <td id="dir_${id}_errwarn">${info.errwarn}</td>
+                <td id="dir_${id}_windowCount">${windowCount}</td>
+                <td id="dir_${id}_sha1">${sha1}</td>
+                <td id="dir_${id}_errwarn">${errwarn}</td>
                 <td>
                     <button data-id="${id}" data-file="${file}">edit</button>
                 </td>
