--- a/ace-public/editor_dir.html
+++ b/ace-public/editor_dir.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css">
     </head>
     <body>
-        <table>
+        <table id="file_list_table">
             <tr>
                 <th>filename</th>
                 <th>date/time</th>
