--- a/ace-public/debug.html
+++ b/ace-public/debug.html
@@ -3,7 +3,7 @@
     </head>
     <body>
         <pre>
-            testing ${file}
+            i am testing ${file}
         </pre>
         <pre>
             open the console with CTL-SHIFT-I or CMD-SHIFT-I
